Fix stupid z-index error because of new QR code

--- a/ppatrol/scouter-style.css
+++ b/ppatrol/scouter-style.css
@@ -1334,6 +1334,8 @@ button[fail]:disabled {
 }
 
 #prompt {
+    z-index: 10000;
+    
     position: absolute;
     top: 0%;
     left: 0%;
